# MetalX

./: Cargo.toml  README.md
agent/: Cargo.toml  README.md
agent/src/: config.rs  main.rs  utils.rs
controller/: README.md  bun.lockb  index.ts  package.json
