[package]
name = "agent"
version = "0.1.0"
edition = "2021"
authors = ["Koi Coco <admin@koito.fun>"]
resolver = "2"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive"] }
futures-util = "0.3.30"
log = { version = "0.4.22", features = ["kv"] }
log4rs = "1.3.0"
maplit = "1.0.2"
reqwest = { version = "0.12.5", features = [
  "json",
  "blocking",
  "stream",
  "multipart",
] }
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.23.1"
toml = "0.8.19"
uuid = "1.10.0"
